--- a/templates/review.html
+++ b/templates/review.html
@@ -34,57 +34,18 @@
                         <td>{{row.Encryption.image_title}}</td>
                         <td>{{row.Encryption.image_category}}</td>
                         <td>{{row.Encryption.physician_name}}</td>
-                        <td>{{row.Users.department}}</td>
+                        <td>{{row.Employees.department}}</td>
                         <td>{{row.Encryption.date_of_creation}}</td>
                         <td>
-                            <a href="/decrypt/{{row.Encryption.image_id}}" class="btn btn-outline-secondary btn-xs" data-bs-toggle="modal" data-bs-target="#modaldecrypt{{row.Encryption.image_id}}">Decrypt</a>
-                            <a href="/send/{{row.Encryption.image_id}}" class="btn btn-outline-secondary btn-xs" data-bs-toggle="modal" data-bs-target="#modalsend{{row.Encryption.image_id}}">Send</a>
+                            <a href="/send/{{row.Encryption.image_id}}" class="btn btn-outline-secondary btn-xs" data-bs-toggle="modal" data-bs-target="#modalsend{{row.Encryption.image_id}}">Get Image</a>
                         </td>
                     </tr>
-
-                    <div id="modaldecrypt{{row.Encryption.image_id}}" class="modal fade" role="dialog">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h4 class="modal-title">Decrypt Image</h4>
-                                </div>
-                                <div class="modal-body">
-                                    <form action="{{url_for('decrypt')}}" method="POST">
-                                        <div class="form-group">
-                                            <label>Patient ID:</label>
-                                            <input type="text" class="form-control" name="patient_id" value="{{row.Encryption.patient_id}}" disabled>
-                                        </div>
-                                        <div class="form-group" style="padding-top: 1rem">
-                                            <input type="hidden" name="image_id" value="{{row.Encryption.image_id}}">
-
-                                            <label>Patient Name:</label>
-                                            <input type="text" class="form-control" name="patient_name" value="{{row.Encryption.patient_name}}" disabled>
-                                        </div>
-                                        <div class="form-group" style="padding-top: 1rem">
-                                            <label>Title:</label>
-                                            <input type="text" class="form-control" name="image_title" value="{{row.Encryption.image_title}}" disabled>
-                                        </div>
-                                        <div class="form-group" style="padding-top: 1rem">
-                                            <label>Image Data:</label>
-                                            <input type="text" class="form-control" name="encrypted_image" value="{{row.Encryption.encrypted_medical_image}}" disabled>
-                                        </div>
-                                        <div class="form-group" style="padding-top: 1rem">
-                                            <button class="btn btn-primary" type="submit">Decrypt</button>
-                                        </div>
-                                    </form>
-                                </div>
-                                <div class="modal-footer">
-                                        <button class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">Close</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
                     <div id="modalsend{{row.Encryption.image_id}}" class="modal fade" role="dialog">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h4 class="modal-title">Send Image</h4>
+                                    <h4 class="modal-title">Decrypt Image</h4>
                                 </div>
                                 <div class="modal-body">
                                     <form action="{{url_for('deepSteganography')}}" method="POST" enctype="multipart/form-data">
@@ -103,15 +64,11 @@
                                             <input type="text" class="form-control" name="image_title" value="{{row.Encryption.image_title}}" disabled>
                                         </div>
                                         <div class="form-group" style="padding-top: 1rem">
-                                            <label>Image Data:</label>
-                                            <input type="text" class="form-control" name="encrypted_image" value="{{row.Encryption.encrypted_medical_image}}" disabled>
-                                        </div>
-                                        <div class="form-group" style="padding-top: 1rem">
                                             <label>Cover Image:</label>
                                             <input class="form-control" type="file" name="cover_image">
                                         </div>
                                         <div class="form-group" style="padding-top: 1rem">
-                                            <button class="btn btn-primary" type="submit">Send</button>
+                                            <button class="btn btn-primary" type="submit">Get Image</button>
                                         </div>
                                     </form>
                                 </div>
