--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 <body class="d-flex flex-column min-vh-100">
     <header class="site-header">
       <nav class="navbar fixed-top navbar-expand-lg navbar-light navbar-btm-shadow">
-         <div id="brand" class="col-xs-8 col-sm-8 col-md-8">
+         <div id="brand" class="col-xs-7 col-sm-7 col-md-7">
             <a class="navbar-brand" href="index.aspx" style="font-size: 40px;">
 
             </a>
@@ -30,7 +30,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
 
-         <div class="collapse navbar-collapse col-xs-4 col-sm-4 col-md-4 text-center" id="navbarSupportedContent">
+         <div class="collapse navbar-collapse col-xs-5 col-sm-5 col-md-5 text-center" id="navbarSupportedContent">
             {% if current_user.is_authenticated %}
                 {% if current_user.urole == 'Employee' %}
                 <ul class="navbar-nav mr-auto mb-1 mb-lg-1" style="white-space: nowrap">
@@ -40,6 +40,10 @@
 
                     <li class="nav-item {{ 'active' if active_page == 'review' else '' }}">
                         <a class="nav-link" href="/review">View</a>
+                    </li>
+
+                    <li class="nav-item {{ 'active' if active_page == 'revealImage' else '' }}">
+                        <a class="nav-link" href="/revealImage">Reveal Image</a>
                     </li>
 
                     <li class="nav-item {{ 'active' if active_page == 'addPatient' else '' }}">
@@ -56,8 +60,8 @@
                         <a class="nav-link" href="/medicalRecords">View Records</a>
                     </li>
 
-                    <li class="nav-item {{ 'active' if active_page == 'addPatient' else '' }}">
-                        <a class="nav-link" href="">Reveal Image</a>
+                    <li class="nav-item {{ 'active' if active_page == 'revealImage' else '' }}">
+                        <a class="nav-link" href="/revealImage">Reveal Image</a>
                     </li>
 
                     <li class="nav-item {{ 'active' if active_page == 'logout' else '' }}">
