--- a/templates/staffDB.html
+++ b/templates/staffDB.html
@@ -18,7 +18,7 @@
                         <th>Mobile Number</th>
                         <th>Department</th>
                         <th>Occupation</th>
-
+                        <th>Action</th>
                     </tr>
 
                     {%for row in staffs%}
@@ -30,7 +30,58 @@
                         <td>{{row.phone}}</td>
                         <td>{{row.department}}</td>
                         <td>{{row.occupation}}</td>
+                        <td>
+                            <a href="/update/{{row.employeeID}}" class="btn btn-outline-secondary btn-xs" data-bs-toggle="modal" data-bs-target="#modalupdate{{row.employeeID}}">Update</a>
+                            <a href="/delete/{{row.id}}" class="btn btn-outline-secondary btn-xs" onclick="return confirm('Are you sure to delete?')">Delete</a>
+
+                        </td>
                     </tr>
+
+                    <div id="modalupdate{{row.employeeID}}" class="modal fade" role="dialog">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h4 class="modal-title">Update Employee Information</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <form action="{{url_for('update')}}" method="POST">
+                                        <div class="form-group">
+                                            <input type="hidden" name="getId" value="{{row.id}}">
+
+                                            <label>Employee ID:</label>
+                                            <input type="text" class="form-control" name="employee_id" value="{{row.employeeID}}" disabled>
+                                        </div>
+                                        <div class="form-group" style="padding-top: 1rem">
+                                            <label>Employee Name:</label>
+                                            <input type="text" class="form-control" name="employee_name" value="{{row.name}}" disabled>
+                                        </div>
+                                        <div class="form-group" style="padding-top: 1rem">
+                                            <label>Email:</label>
+                                            <input type="text" class="form-control" name="email" value="{{row.email}}">
+                                        </div>
+                                        <div class="form-group" style="padding-top: 1rem">
+                                            <label>Phone:</label>
+                                            <input type="text" class="form-control" name="phone" value="{{row.phone}}">
+                                        </div>
+                                        <div class="form-group" style="padding-top: 1rem">
+                                            <label>Department:</label>
+                                            <input type="text" class="form-control" name="department" value="{{row.department}}">
+                                        </div>
+                                        <div class="form-group" style="padding-top: 1rem">
+                                            <label>Occupation:</label>
+                                            <input type="text" class="form-control" name="occupation" value="{{row.occupation}}" disabled>
+                                        </div>
+                                        <div class="form-group" style="padding-top: 1rem">
+                                            <button class="btn btn-primary" type="submit">Update</button>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                        <button class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     {%endfor%}
                 </table>
             </div>
